# treequest

./: CONTRIBUTING.md  README.md  pyproject.toml
mcp_treequest/: README.md  __init__.py  __main__.py  server.py
src/treequest/: __init__.py  trial.py  types.py  visualization.py
src/treequest/algos/: base.py  best_first_search.py  multi_armed_bandit_ucb.py  standard_mcts.py  tree.py  tree_of_thought_bfs.py
src/treequest/algos/ab_mcts_a/: algo.py
src/treequest/algos/ab_mcts_m/: algo.py
src/treequest/vis/: __init__.py  build_snapshot.py  errors.py  render.py  snapshot.py
src/treequest/vis/algo_adapters/: __init__.py  ab_mcts_a.py  ab_mcts_m.py  base.py  best_first_search.py  multi_armed_bandit_ucb.py  standard_mcts.py  tree_of_thoughts_bfs.py
src/treequest/vis/assets/: colormaps.json  d3_tree.html.jinja2
src/treequest/vis/renderers/: __init__.py  color_utils.py  graphviz_renderer.py  html.py  json_yaml.py  mermaid.py
tests/: test_ab_mcts_a_visualization.py  test_algo_adapters.py  test_color_utils.py  test_tot_bfs.py  test_tree.py  test_visualization_renderers.py  test_visualization_snapshot.py
tests/profiling/: ab_mcts_a.py  ab_mcts_m.py
